tests/compile/aggregate_scope.stderr
error: lifetime may not live long enough
 --> tests/compile/aggregate_scope.rs:9:5
  |
3 | fn columns<'outer, 'inner, S: 'static>(
  |            ------  ------ lifetime `'inner` defined here
  |            |
  |            lifetime `'outer` defined here
...
9 |     aggr.filter_on(outer, 10);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^ argument requires that `'outer` must outlive `'inner`
  |
  = help: consider adding the following bound: `'outer: 'inner`

error: lifetime may not live long enough
  --> tests/compile/aggregate_scope.rs:10:5
   |
3  | fn columns<'outer, 'inner, S: 'static>(
   |            ------  ------ lifetime `'inner` defined here
   |            |
   |            lifetime `'outer` defined here
...
10 |     aggr.filter_on(10, inner);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ argument requires that `'inner` must outlive `'outer`
   |
   = help: consider adding the following bound: `'inner: 'outer`

help: `'outer` and `'inner` must be the same: replace one with the other

error: lifetime may not live long enough
  --> tests/compile/aggregate_scope.rs:17:5
   |
13 | fn sum<'outer, 'inner, S: 'static>(
   |        ------  ------ lifetime `'inner` defined here
   |        |
   |        lifetime `'outer` defined here
...
17 |     aggr.sum(outer);
   |     ^^^^^^^^^^^^^^^ argument requires that `'outer` must outlive `'inner`
   |
   = help: consider adding the following bound: `'outer: 'inner`
